# Eat-Safe-AI-FastAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai/: dish_analysis.py  image_gen.py  ingredient_analysis.py  safety.py  tips_generator.py  utils.py
app/: main.py
app/routers/: hello.py  search.py  tip.py
